2020-05-18  Jose E. Marchesi  <jemarch@gnu.org>

	* maps/elf.map: Rename entry from elf to file.

2020-05-17  Tim Rühsen  <tim.ruehsen@gmx.de>

	* libpoke/pkl-env.c (hash_string): Suppress ASAN runtime error
	"implicit-signed-integer-truncation-or-sign-change".

2020-05-18  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-lex.l: Support :: separators in alien token
	identifiers.
	* poke/pk-map.c (pk_map_alien_token_handler): Use :: to separate
	mapname from entryname in alien tokens.
	(pk_map_normalize_name): Do not reduce sequences of _'s.

2020-05-18  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-lex.l: Change bit-concatenation operator from :: to
	:::.
	* doc/poke.texi (From Bytes to Integers): Update accordingly.
	(Bitwise Operators): Likewise.
	* testsuite/poke.pkl/bconc-7.pk: Likewise.
	* testsuite/poke.pkl/bconc-6.pk: Likewise.
	* testsuite/poke.pkl/bconc-5.pk: Likewise.
	* testsuite/poke.pkl/bconc-4.pk: Likewise.
	* testsuite/poke.pkl/bconc-3.pk: Likewise.
	* testsuite/poke.pkl/bconc-2.pk: Likewise.
	* testsuite/poke.pkl/bconc-1.pk: Likewise.

2020-05-18  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-map.c (pk_map_normalize_name): New function.
	(pk_map_load_file): Use pk_map_normalize_name.
	* poke/pk-cmd-map.c (pk_cmd_map_create): Likewise.

2020-05-18  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c: Make poke_prompt_maps_p to default to yes.
	* poke/pk-ios.c (pk_open_ios): Do not emit an "auto-map: loaded"
	message if prompt-maps is enabled.

2020-05-18  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-map.c (pk_map_add_entry): Get both name and varname as
	arguments.
	(pk_map_load_parsed_map): Adjust call accordingly.
	* poke/pk-cmd-map.c (pk_cmd_map_entry_add): LIkewise.
	(pk_cmd_map_show): Do now show a Variable column.
	* testsuite/poke.cmd/maps-4.pk: Adapt accordingly.
	* testsuite/poke.cmd/maps-5.pk: Likewise.
	* testsuite/poke.cmd/maps-6.pk: Likewise.

2020-05-17  Jose E. Marchesi  <jemarch@gnu.org>
