@@ -1,5 +1,13 @@
 2020-05-18  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* poke/pk-cmd-map.c (pk_cmd_map_show): Include the map name while
+	listing entries.
+	* testsuite/poke.cmd/maps-4.pk: Adapt accordingly.
+	* testsuite/poke.cmd/maps-5.pk: Likewise.
+	* testsuite/poke.cmd/maps-6.pk: Likewise.
+
+2020-05-18  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* maps/elf.map: Rename entry from elf to file.
 
 2020-05-17  Tim Rühsen  <tim.ruehsen@gmx.de>
